fixed password/forgotpassword, fixed need help, form spacing/alignment

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -24,6 +24,7 @@ body {
 .form {
     text-align: left;
     margin-bottom: 25px;
+    padding: 5px;
 }
 
 .box1 {
@@ -33,7 +34,7 @@ body {
     height: 300px;
     margin: auto;
     margin-bottom: 45px;
-    padding: 10px;
+    padding: 5px;
 }
 
 .box {
@@ -58,20 +59,31 @@ body {
 .form1-style > label {
     font-size: small;
 }
-.form2-style > label {
-    font-size: small;
-    padding-left: 3vw;
+
+
+#pass-spacing {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5px;
+    padding-right: 10px;
 }
+#pass-spacing > label {
+    font-size: small;
+}
+
 
 .box-inner {
     text-align: left;
 }
 
+
+
 form > input {
-    width: 320px;
+    width: 19rem;
     height: 25px;
     margin-top: 10px;
     margin-bottom: 20px;
+    padding-left: 11px;
 }
 
 form > a {
@@ -115,7 +127,7 @@ form > a {
     text-decoration: none;
     color: rgb(90, 113, 227);
     font-size: smaller;
-    margin-right: 19vw;
+    padding-right: 15rem;
 }
 
 .footer {
